fix errors on mobile view

--- a/styles.css
+++ b/styles.css
@@ -338,10 +338,9 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('images/mobile_menu_top.png'),
-    url('images/mobile_menu_bottom.png'),
-    url('images/dots.png'),
-    url('images/dots.png');
+  background-image: url("images/mobile_menu_top.png"),
+    url("images/mobile_menu_bottom.png"), url("images/dots.png"),
+    url("images/dots.png");
   background-repeat: no-repeat;
   background-position: left top, left bottom, 75% 15%, 15% 75%;
   background-size: 11.1rem 7.4rem, 32rem 8rem, 4rem, 4rem;
@@ -452,8 +451,7 @@ footer {
     grid-template-columns: 1fr 1fr;
     gap: 0;
     grid-area: 1 / 1;
-    background:
-      url("./images/desktop/image_dots_with_teal.svg") no-repeat 100%
+    background: url("./images/desktop/image_dots_with_teal.svg") no-repeat 100%
       100%;
     background-size: 40%;
   }
@@ -468,8 +466,7 @@ footer {
   }
 
   .contact-form {
-    background:
-      url("./images/desktop/image-geometry_6.svg") no-repeat,
+    background: url("./images/desktop/image-geometry_6.svg") no-repeat,
       url("./images/desktop/image-geometry_7.svg") no-repeat 100% 100%;
     background-size: 170px;
     display: flex;
@@ -562,8 +559,7 @@ footer {
   }
 
   .projects-container {
-    background:
-      url("./images/desktop/image_dots.svg") no-repeat 30% 8%,
+    background: url("./images/desktop/image_dots.svg") no-repeat 30% 8%,
       url("images/desktop/image-geometry_5.svg") no-repeat 0 90%,
       url("images/desktop/image-geometry_2.svg") no-repeat 48% 52%,
       url("images/desktop/image-geometry_3.svg") no-repeat 80% 82%,
